homepage redesign,background, animation

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Projects</a></li>
+          <li><a href="./projects.html" title="">02 : Projects</a></li>
           <li><a href="./about.html" title="">03 : CV</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
         </ul>
@@ -59,13 +59,17 @@
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
+              <center>
+                <blockquote style="font-size: 1.5rem;">I want to be an UX designer with tech background.</blockquote>
+              </center>
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <a href='#'>Full CV</a>
                   <h3>Education</h3>
                   <p>
                     <b><a href="https://www.dtu.dk/english" class='clean_link' target="_blank">Technical University of Denmark</a></b></br>
                     M.S.C in Human-centered Artificial Intelligence</br>
+                    <b><a href="https://www.kth.se/en/studies/master/interactive-media-technology/" class='clean_link' target="_blank">KTH Royal Instituition(exchange)</a></b></br>
+                    M.S.C in Interactive Media Technology</br>
                     <b><a href="http://www.hdu.edu.cn/en/" class='clean_link' target="_blank">Hangzhou Dianzi University</a></b></br>
                     B.M. in Information Management and Information Systems </br>
                     <b><a href="https://www.uq.edu.au/" class='clean_link' target="_blank">The University of Queensland</a></b></br>
@@ -122,19 +126,12 @@
                     <b>Books</b><br>
                     <ul>
                       <li>The UX Book - Agile UX Design for a Quality User Experience 2nd</li>
-                      <li>ELEMENTS OF STATISTICS PROBABILITY</li>
-                      <li>Naked Statistics: Stripping the Dread from the Data</li>
+                      <li>The Three-Body Problem</li>
                     </ul>
-                    <b>Literature</b><br>
-                    <ul>
-                      <li>Evaluation of Prototypes and the Problem of Possible Futures</li>
-                      <li>It's time to rediscover HCI models</li>
-                      <li>How do People Type on Mobile Devices?: Observations from a Study with 37,000 Volunteers</li>
-                    </ul>
-                   </p>
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/selfie.svg" class="img-responsive" alt="">
+                  <img src="./assets/images/selfie.svg" class="img-responsive" alt="cartoon selfie">
                 </div>
               </div>
             </div>
