--- a/reafel.html
+++ b/reafel.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Projects</a></li>
+          <li><a href="./projects.html" title="">02 : Projects</a></li>
           <li><a href="./about.html" title="">03 : CV</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
         </ul>
@@ -199,7 +199,10 @@
 
                 <h4>UX workflow evaluation</h4><br>
                 <div>
-                  <div class="feature-text"></div>
+                  <div class="feature-text">We tested 2 main function flows of patient-end and clinician-end with 3 subjects,
+                    starting from wearing monitor device, write a symptom log, check patient status and write a patient summary
+                    Based on their finishing time, obstacles and feedback, we further iterated the system for better user experience.
+                  </div>
                   </div>
                   <img src="./assets/images/reafel_ux_metrix  (1).png" class="test_image">
                   <img src="./assets/images/reafel_ux_metrix  (2).png" class="test_image">
@@ -216,23 +219,22 @@
 
                 <h4>What's the advantages of applying VUI design?</h4><br>
                 <div class="feature-text">
-                      . 
+                      <center>Natural! Faster! Accessible! </center>
                 </div>
                 <div><img src="./assets/images/reafel_gui_vs_vui.png" class="test_image"></div>
         </div>
       </div>
 
-      
-
-      <h3><center>Wireframes</center></h3><br>
+    </div>
+    <h3><center>Wireframes</center></h3><br>
       <div class="col-xs-12">
         <h4><center>Patient-end</center></h4><br>
-        <img src="./assets/images/RF_mobile.png" class="img-responsive" alt="">
+        <div style="background-color: #F2F2F2; padding: 10px;"><img src="./assets/images/RF_mobile.png" class="img-responsive" alt=""></div>
+        <br><br><br><br>
         <h4><center>Clinician-end</center></h4><br>
-        <img src="./assets/images/RF_wb.png" class="img-responsive" alt="">
+        <div style="background-color: #F2F2F2; padding: 10px;"><img src="./assets/images/RF_wb.png" class="img-responsive" alt=""></div>
       </div>
 
-    </div>
   </div>
 </div>
 
